# breeze

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
archived/: Cargo.toml  LICENSE
archived/src/: entry.rs  lib.rs
nix/: module.nix
src/: cache.rs  config.rs  delete.rs  disk.rs  engine.rs  index.rs  main.rs  new.rs  state.rs  view.rs
