[package]
name = "breeze"
version = "0.3.0"
edition = "2024"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }

[dependencies]
argh = "0.1.12"
atomic-time = "0.1.4"
axum = { version = "0.8.1", features = ["macros", "http2"] }
axum-extra = { version = "0.10.0", default-features = false, features = [
    "tracing",
    "typed-header",
] }
base64 = "0.21"
bytes = "1"
color-eyre = "0.6"
dashmap = { version = "6.1.0", features = ["inline"] }
headers = "0.4"
hmac = "0.12.1"
http = "1.2"
img-parts = "0.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
sha2 = "0.10.9"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "signal",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8.2"
tracing = "0.1"
tracing-subscriber = "0.3"
twox-hash = "2"
walkdir = "2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
